--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
     "@types/node": "^12.20.16",
     "@types/react": "^17.0.14",
     "@types/react-dom": "^17.0.9",
-    "react": "^17.0.2",
     "classnames": "^2.3.1",
     "prettier": "2.3.2",
-    "sass": "1.35.1",
+    "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
+    "react-slick": "^0.28.1",
+    "sass": "1.35.1",
+    "slick-carousel": "^1.8.1",
     "typescript": "^4.3.5",
     "web-vitals": "^1.1.2"
   },
@@ -44,5 +46,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/react-slick": "^0.23.5"
   }
 }
