--- a/package.json
+++ b/package.json
@@ -14,8 +14,9 @@
     "prettier": "2.3.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-lazy-images": "^1.1.0",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.3",
+    "react-scripts": "^4.0.3",
     "react-slick": "^0.28.1",
     "sass": "1.35.1",
     "slick-carousel": "^1.8.1",
