--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-lazy-images": "^1.1.0",
+    "react-query": "^3.19.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.3",
     "react-slick": "^0.28.1",
@@ -52,6 +53,7 @@
   },
   "devDependencies": {
     "@types/react-router-dom": "^5.1.8",
-    "@types/react-slick": "^0.23.5"
+    "@types/react-slick": "^0.23.5",
+    "msw": "^0.32.0"
   }
 }
