--- a/package.json
+++ b/package.json
@@ -55,5 +55,8 @@
     "@types/react-router-dom": "^5.1.8",
     "@types/react-slick": "^0.23.5",
     "msw": "^0.34.0"
+  },
+  "msw": {
+    "workerDirectory": "public"
   }
 }
