--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-query": "^3.19.6",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.3",
+    "react-select": "^4.3.1",
     "react-slick": "^0.28.1",
     "react-spring": "^9.2.4",
     "sass": "1.38.0",
@@ -53,6 +54,7 @@
   },
   "devDependencies": {
     "@types/react-router-dom": "^5.1.8",
+    "@types/react-select": "^4.0.17",
     "@types/react-slick": "^0.23.5"
   }
 }
