--- a/package.json
+++ b/package.json
@@ -57,6 +57,10 @@
   "devDependencies": {
     "@types/react-router-dom": "^5.1.8",
     "@types/react-select": "^4.0.17",
-    "@types/react-slick": "^0.23.5"
+    "@types/react-slick": "^0.23.5",
+    "msw": "^0.35.0"
+  },
+  "msw": {
+    "workerDirectory": "public"
   }
 }
