--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@billjs/query-string": "^1.0.2",
     "@hookform/resolvers": "^2.8.0",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.1.0",
@@ -13,10 +14,11 @@
     "@types/react-dom": "^17.0.9",
     "classnames": "^2.3.1",
     "prettier": "2.4.1",
+    "query-string": "^4.3.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.15.3",
-    "react-lazy-images": "^1.1.0", 
+    "react-lazy-images": "^1.1.0",
     "react-query": "^3.23.2",
     "react-router-dom": "^5.3.0",
     "react-scripts": "^4.0.3",
