--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@billjs/query-string": "^1.0.2",
     "@hookform/resolvers": "^2.8.0",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.1.0",
@@ -57,6 +56,7 @@
     ]
   },
   "devDependencies": {
+    "@types/qs": "^6.9.7",
     "@types/react-router-dom": "^5.1.9",
     "@types/react-select": "^4.0.17",
     "@types/react-slick": "^0.23.5",
